fix user authentication